deps/bleveldb-sys/src/lib.rs

//! Rust bindings for LevelDB
//!
//! This crate provides safe Rust bindings for LevelDB, a fast key-value storage library
//! written by Google, forked by Mojang. It exposes the C API through FFI with proper memory management
//! and error handling.
//!
//! # Safety
//!
//! All functions in this crate are marked `unsafe` as they interact with C code and
//! require proper pointer management. Callers must ensure:
//! - All pointers passed to functions are valid
//! - Memory is properly managed and freed
//! - Error pointers are checked after operations
//!

#![allow(non_camel_case_types, non_upper_case_globals, non_snake_case)]

extern crate libc;
#[macro_use]
extern crate ffi_opaque;

use libc::size_t;
use libc::{c_char, c_int, c_uchar, c_void};

// Opaque type definitions for LevelDB objects
opaque! {
    /// Database handle representing an open LevelDB database instance
    pub struct leveldb_t;

    /// Cache for uncompressed data blocks to improve read performance
    pub struct leveldb_cache_t;

    /// Custom comparator for key ordering
    pub struct leveldb_comparator_t;

    /// Environment abstraction for OS-specific operations
    pub struct leveldb_env_t;

    /// File lock handle for concurrent access control
    pub struct leveldb_filelock_t;

    /// Filter policy for bloom filters and other filtering mechanisms
    pub struct leveldb_filterpolicy_t;

    /// Iterator for traversing database entries
    pub struct leveldb_iterator_t;

    /// Logger for informational and error messages
    pub struct leveldb_logger_t;

    /// Database configuration options
    pub struct leveldb_options_t;

    /// Random access file handle
    pub struct leveldb_randomfile_t;

    /// Read operation options and settings
    pub struct leveldb_readoptions_t;

    /// Sequential file handle
    pub struct leveldb_seqfile_t;

    /// Immutable database snapshot for consistent reads
    pub struct leveldb_snapshot_t;

    /// Writable file handle
    pub struct leveldb_writablefile_t;

    /// Batch of write operations for atomic updates
    pub struct leveldb_writebatch_t;

    /// Write operation options and settings
    pub struct leveldb_writeoptions_t;
}

/// Compression algorithms supported by LevelDB
#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq)]
pub enum Compression {
    /// No compression - faster but uses more disk space
    No = 0,
    /// Snappy compression - good balance of speed and compression ratio
    Snappy = 1,
    /// Zstd compression - higher compression ratio, slower
    Zstd = 2,
    /// Zlib raw compression - compatible with zlib, slower
    ZlibRaw = 4,
}

unsafe extern "C" {
    // =========================================================================
    // Database Operations
    // =========================================================================

    /// Open a LevelDB database with the specified options
    ///
    /// # Arguments
    ///
    /// * `options` - Database configuration options
    /// * `name` - Path to the database directory as a null-terminated C string
    /// * `errptr` - Pointer to store error message if operation fails
    ///
    /// # Returns
    ///
    /// Pointer to a new database handle on success, null pointer on failure
    ///
    /// # Safety
    ///
    /// - `options` must be a valid pointer from `leveldb_options_create()`
    /// - `name` must be a valid null-terminated C string
    /// - `errptr` must point to a valid `*mut c_char` location
    /// - Caller must call `leveldb_close()` on the returned pointer
    pub fn leveldb_open(
        options: *const leveldb_options_t,
        name: *const c_char,
        errptr: *mut *mut c_char,
    ) -> *mut leveldb_t;

    /// Close a database and release all associated resources
    ///
    /// # Arguments
    ///
    /// * `db` - Database handle to close
    ///
    /// # Safety
    ///
    /// - `db` must be a valid pointer from `leveldb_open()`
    /// - After this call, `db` becomes invalid and should not be used
    pub fn leveldb_close(db: *mut leveldb_t);

    /// Store a key-value pair in the database
    ///
    /// # Arguments
    ///
    /// * `db` - Database handle
    /// * `options` - Write options
    /// * `key` - Key data pointer
    /// * `keylen` - Length of key data in bytes
    /// * `val` - Value data pointer
    /// * `vallen` - Length of value data in bytes
    /// * `errptr` - Pointer to store error message if operation fails
    ///
    /// # Safety
    ///
    /// - All pointers must be valid
    /// - `key` and `val` must point to at least `keylen` and `vallen` bytes respectively
    pub fn leveldb_put(
        db: *mut leveldb_t,
        options: *const leveldb_writeoptions_t,
        key: *const c_char,
        keylen: size_t,
        val: *const c_char,
        vallen: size_t,
        errptr: *mut *mut c_char,
    );

    /// Delete a key from the database
    ///
    /// # Arguments
    ///
    /// * `db` - Database handle
    /// * `options` - Write options
    /// * `key` - Key data pointer
    /// * `keylen` - Length of key data in bytes
    /// * `errptr` - Pointer to store error message if operation fails
    ///
    /// # Safety
    ///
    /// - All pointers must be valid
    /// - `key` must point to at least `keylen` bytes
    pub fn leveldb_delete(
        db: *mut leveldb_t,
        options: *const leveldb_writeoptions_t,
        key: *const c_char,
        keylen: size_t,
        errptr: *mut *mut c_char,
    );

    /// Execute a batch of write operations atomically
    ///
    /// # Arguments
    ///
    /// * `db` - Database handle
    /// * `options` - Write options
    /// * `batch` - Batch of write operations to execute
    /// * `errptr` - Pointer to store error message if operation fails
    ///
    /// # Safety
    ///
    /// - All pointers must be valid
    /// - `batch` must be a valid write batch
    pub fn leveldb_write(
        db: *mut leveldb_t,
        options: *const leveldb_writeoptions_t,
        batch: *mut leveldb_writebatch_t,
        errptr: *mut *mut c_char,
    );

    /// Retrieve a value for the given key
    ///
    /// # Arguments
    ///
    /// * `db` - Database handle
    /// * `options` - Read options
    /// * `key` - Key data pointer
    /// * `keylen` - Length of key data in bytes
    /// * `vallen` - Pointer to store the length of returned value
    /// * `errptr` - Pointer to store error message if operation fails
    ///
    /// # Returns
    ///
    /// Pointer to the value data on success, null pointer if key not found.
    /// Caller must call `leveldb_free()` on the returned pointer.
    ///
    /// # Safety
    ///
    /// - All pointers must be valid
    /// - Caller must free returned value with `leveldb_free()`
    pub fn leveldb_get(
        db: *mut leveldb_t,
        options: *const leveldb_readoptions_t,
        key: *const c_char,
        keylen: size_t,
        vallen: *mut size_t,
        errptr: *mut *mut c_char,
    ) -> *mut c_char;

    /// Create an iterator for traversing database entries
    ///
    /// # Arguments
    ///
    /// * `db` - Database handle
    /// * `options` - Read options
    ///
    /// # Returns
    ///
    /// Pointer to a new iterator handle
    ///
    /// # Safety
    ///
    /// - `db` must be a valid database handle
    /// - Caller must call `leveldb_iter_destroy()` on the returned pointer
    pub fn leveldb_create_iterator(
        db: *mut leveldb_t,
        options: *const leveldb_readoptions_t,
    ) -> *mut leveldb_iterator_t;

    /// Create a snapshot of the current database state
    ///
    /// # Arguments
    ///
    /// * `db` - Database handle
    ///
    /// # Returns
    ///
    /// Pointer to a new snapshot handle
    ///
    /// # Safety
    ///
    /// - `db` must be a valid database handle
    /// - Caller must call `leveldb_release_snapshot()` on the returned pointer
    pub fn leveldb_create_snapshot(db: *mut leveldb_t) -> *mut leveldb_snapshot_t;

    /// Release a snapshot and its associated resources
    ///
    /// # Arguments
    ///
    /// * `db` - Database handle
    /// * `snapshot` - Snapshot to release
    ///
    /// # Safety
    ///
    /// - Both `db` and `snapshot` must be valid pointers
    /// - After this call, `snapshot` becomes invalid
    pub fn leveldb_release_snapshot(db: *mut leveldb_t, snapshot: *const leveldb_snapshot_t);

    /// Get property value from the database
    ///
    /// # Arguments
    ///
    /// * `db` - Database handle
    /// * `propname` - Property name as null-terminated C string
    ///
    /// # Returns
    ///
    /// Pointer to property value string, or null if property doesn't exist.
    /// Caller must call `leveldb_free()` on the returned pointer.
    ///
    /// # Safety
    ///
    /// - `db` must be a valid database handle
    /// - `propname` must be a valid null-terminated C string
    /// - Caller must free returned value with `leveldb_free()`
    pub fn leveldb_property_value(db: *mut leveldb_t, propname: *const c_char) -> *mut c_char;

    /// Estimate sizes of key ranges in the database
    ///
    /// # Arguments
    ///
    /// * `db` - Database handle
    /// * `num_ranges` - Number of key ranges to estimate
    /// * `range_start_key` - Array of range start keys
    /// * `range_start_key_len` - Array of start key lengths
    /// * `range_limit_key` - Array of range limit keys
    /// * `range_limit_key_len` - Array of limit key lengths
    /// * `sizes` - Output array for estimated sizes
    ///
    /// # Safety
    ///
    /// - All pointers must be valid and arrays must have proper lengths
    pub fn leveldb_approximate_sizes(
        db: *mut leveldb_t,
        num_ranges: c_int,
        range_start_key: *const *const c_char,
        range_start_key_len: *const size_t,
        range_limit_key: *const *const c_char,
        range_limit_key_len: *const size_t,
        sizes: *mut u64,
    );

    /// Compact the specified key range in the database
    ///
    /// # Arguments
    ///
    /// * `db` - Database handle
    /// * `start_key` - Start key of range to compact (inclusive)
    /// * `start_key_len` - Length of start key
    /// * `limit_key` - Limit key of range to compact (exclusive)
    /// * `limit_key_len` - Length of limit key
    ///
    /// # Safety
    ///
    /// - `db` must be a valid database handle
    /// - Key pointers must be valid if non-null
    pub fn leveldb_compact_range(
        db: *mut leveldb_t,
        start_key: *const c_char,
        start_key_len: size_t,
        limit_key: *const c_char,
        limit_key_len: size_t,
    );

    // =========================================================================
    // Management Operations
    // =========================================================================

    /// Destroy the contents of the specified database
    ///
    /// # Arguments
    ///
    /// * `options` - Options for the operation
    /// * `name` - Path to database directory
    /// * `errptr` - Pointer to store error message if operation fails
    ///
    /// # Safety
    ///
    /// - `options` must be a valid options pointer
    /// - `name` must be a valid null-terminated C string
    pub fn leveldb_destroy_db(
        options: *const leveldb_options_t,
        name: *const c_char,
        errptr: *mut *mut c_char,
    );

    /// Repair a corrupted database
    ///
    /// # Arguments
    ///
    /// * `options` - Options for the operation
    /// * `name` - Path to database directory
    /// * `errptr` - Pointer to store error message if operation fails
    ///
    /// # Safety
    ///
    /// - `options` must be a valid options pointer
    /// - `name` must be a valid null-terminated C string
    pub fn leveldb_repair_db(
        options: *const leveldb_options_t,
        name: *const c_char,
        errptr: *mut *mut c_char,
    );
